# pythonTemplate

./: DOCKERFILE  Makefile  README.md  cookiecutter.json  environment.yml  standard_environment.yml
envs/: data_analytics_environment.yml  readme.md  standard_environment.yml
hooks/: post_gen_project.bat  post_gen_project.py  pre_gen_project.py
sample_module/tests/: test_sample.py
tests/: test_template.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  Dockerfile  Makefile  README.md  environment.yml  setup.cfg
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/envs/: environment.yml  jupyter_environment.yml
{{cookiecutter.project_slug}}/mymodule/tests/: test_utils.py
{{cookiecutter.project_slug}}/mymodule/utils/: utils.py
{{cookiecutter.project_slug}}/notebooks/: helpers.py  my_notebook.ipynb
{{cookiecutter.project_slug}}/tests/: test_utils.py
{{cookiecutter.project_slug}}/utils/tests/: test_sample.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_slug}}/: utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_slug}}/tests/: test_utils.py
