[metadata]
name = {{cookiecutter.project_slug}}
version = 0.0.1
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
description = Sample description
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = {{cookiecutter.module_slug}}
packages = find:
python_requires = >=3.6

[options.packages.find]
where = {{cookiecutter.module_slug}}